--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+  body{
+    background-color: #666;
+  }
+
   
   .header{
     display: flex;
@@ -11,13 +15,15 @@
     position: fixed;
     width: 100vw;
     padding: 10px 0;
-    background-color: #666;
+    background-color: #333;
     border-bottom: 1px solid #fff;
     z-index: 10;
   }
   
   .header-image{
     padding-left: 100px;
+    width: 140px;
+    height: 80px;
   }
   
   .header-nav{
@@ -315,7 +321,8 @@
   .footer{
     margin-top: 70px;
     display: flex;
-    background-color: #666;
+    background-color: #333;
+    color: #fff;
   }
   
   .footer>div{
@@ -351,7 +358,7 @@
     padding-top: 60px;
     display: block;
     text-align: center;
-    background-color: #666;
+    background-color: #333;
   }
 
 @media (max-width: 450px) {
