--- a/style.css
+++ b/style.css
@@ -368,6 +368,10 @@
     padding: 0;
   }
 
+  body{
+    background-color: #333;
+  }
+
   .header{
     display: inline-block;
     padding: 0;
@@ -744,6 +748,10 @@
   *{
     margin: 0;
     padding: 0;
+  }
+
+  body{
+    background-color: #333;
   }
 
   .header{
