--- a/style2.css
+++ b/style2.css
@@ -164,7 +164,7 @@
     }
 
       .about{
-        margin-top: 180px;
+        margin-top: 240px;
         width: 430px;
       }
     
@@ -173,7 +173,7 @@
         font-size: 40px;
         border-bottom: 4px solid #444;
         margin-left: 140px;
-        margin-bottom: 20px;
+        margin-bottom: 80px;
       }
     
       .about-list{
@@ -186,12 +186,13 @@
       .about-list>p{
         width: 430px;
         font-size: 10px;
+        line-height: 50px;
       }
     
       .about-image{
         display: block;
         width: 430px;
-        margin: 0;
+        margin: 100px 0;
         padding: 0;
         margin-bottom: 20px;
       }
@@ -199,12 +200,11 @@
       .about-image2{
         display: block;
         width: 430px;
-        margin: 0;
+        margin: 100px 0;
         padding: 0;
         margin-bottom: 20px;
       }
 
-      
       .about-image>img{
         width: 300px;
         height: 180px;
@@ -257,4 +257,148 @@
     text-align: center;
     background-color: #333;
   }
+  }
+
+  @media (max-width: 400px) {
+    
+      *{
+        margin: 0;
+        padding: 0;
+      }
+    
+      body{
+        background-color: #666;
+      }
+    
+      .header{
+        display: inline-block;
+        padding: 0;
+        margin: 0;
+        width: 390px;
+      }
+      
+      .header-image{
+        padding-left: 65px;
+        width: 140px;
+        height: 80px;
+      }
+      
+      .header-nav{
+        display: flex;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      
+      .header-nav>a{
+        display: inline-block;
+        font-size: 12px;
+        width: calc(100% / 4);
+        color: #fff;
+        text-decoration: none;
+        padding: 0;
+        margin: 0;
+      }
+      
+      .header-nav>a:hover{
+        background-color: #888;
+        transition: .5s;
+      }
+  
+        .about{
+          margin-top: 240px;
+          width: 390px;
+        }
+      
+        .about>h1{
+          display: inline-block;
+          font-size: 40px;
+          border-bottom: 4px solid #444;
+          margin-left: 120px;
+          margin-bottom: 60px;
+        }
+      
+        .about-list{
+          width: 390px;
+          margin: 0;
+          text-align: center;
+          display: block;
+        }
+  
+        .about-list>p{
+          width: 390px;
+          font-size: 10px;
+        }
+      
+        .about-image{
+          display: block;
+          width: 390px;
+          margin: 0;
+          padding: 0;
+          margin: 60px 0;
+        }
+      
+        .about-image2{
+          display: block;
+          width: 390px;
+          margin: 0;
+          padding: 0;
+          margin: 60px 0;
+        }
+  
+        
+        .about-image>img{
+          width: 300px;
+          height: 180px;
+          margin: 0;
+        }
+  
+        .about-image2>img{
+          width: 300px;
+          height: 180px;
+        }
+      
+          
+    .footer{
+      margin-top: 70px;
+      display: block;
+      width: 390px;
+      height: 300px;
+      background-color: #333;
+    }
+    
+    .footer>div{
+      width: 240px;
+      padding-top: 20px;
+    }
+    
+    .footer>div>p{
+      padding-top: 5px;
+      height: 50px;
+      font-size: 13px;
+    }
+    
+    .footer>div>img{
+      height: 50px;
+    }
+    
+    .footer>div>address{
+      height: 50px;
+      font-size: 13px;
+    }
+    
+    .hr{
+      display: none;
+    }
+    
+    .small{
+      margin: 0;
+      width: 390px;
+      height: 40px;
+      display: block;
+      text-align: center;
+      background-color: #333;
+    }
+    }
+    
   }
